--- a/front-end/src/app/pages/create-profile/create-profile.component.html
+++ b/front-end/src/app/pages/create-profile/create-profile.component.html
@@ -71,7 +71,7 @@
                   />
                 </div>
                 <div class="form-control">
-                  <mat-label>Nick Name:</mat-label>
+                  <mat-label>Nickname:</mat-label>
                   <input
                     formControlName="nickName"
                     required
