--- a/front-end/src/app/pages/create-profile/create-profile.component.sass
+++ b/front-end/src/app/pages/create-profile/create-profile.component.sass
@@ -83,3 +83,12 @@ option
 .form_error input,
 .form_error select
     border: 2px solid $primary-red !important
+
+mat-card
+    max-width: 1000px
+
+mat-horizontal-stepper
+    background-color: #fcfcfc
+
+mat-card-header
+    margin: 5px auto
