added second form - initial commit

--- a/front-end/src/app/pages/create-profile/create-profile.component.html
+++ b/front-end/src/app/pages/create-profile/create-profile.component.html
@@ -13,112 +13,21 @@
       <span class="dark_font">Create Profile</span>
     </span>
   </div>
-  <mat-horizontal-stepper linear>
+  <mat-horizontal-stepper selectedIndex="1">
     <mat-step [stepControl]="profileInfoForm">
-      <form [formGroup]="profileInfoForm">
-        <ng-template matStepLabel>Profile Information</ng-template>
-        <div
-          class="form-control"
-          [class.form_error]="
-            profileInfoForm?.get('profileType')?.touched &&
-            profileInfoForm?.get('profileType')?.errors
-          "
-        >
-          <mat-label>Profile Type:</mat-label>
-          <select
-            placeholder="Select Profile Type"
-            formControlName="profileType"
-            required
-          >
-            <option *ngFor="let pt of profileTypes" [value]="pt.code">
-              {{ pt.name }}
-            </option>
-          </select>
-        </div>
-        <div
-          class="form-control"
-          *ngIf="profileInfoForm?.get('profileType')?.value"
-          [class.form_error]="
-            profileInfoForm?.get('profileName')?.touched &&
-            profileInfoForm?.get('profileName')?.errors
-          "
-        >
-          <mat-label>Profile Name: </mat-label>
-          <input
-            formControlName="profileName"
-            required
-            placeholder="Enter Profile Name"
-          />
-        </div>
-        <mat-card *ngIf="profileInfoForm?.get('profileType')?.value">
-          <mat-card-header>Email Addresses</mat-card-header>
-          <mat-card-content>
-            <div formGroupName="emailAddresses" class="form-group">
-              <div class="form-control">
-                <mat-label>RA "From" Email Address:</mat-label>
-                <input
-                  formControlName="raFromEmailAddress"
-                  required
-                  placeholder="Enter RA From Email Address"
-                />
-              </div>
-              <div class="form-control">
-                <mat-label>Support Email Address:</mat-label>
-                <input
-                  formControlName="supportEmailAddress"
-                  required
-                  placeholder="Enter Support Email Address"
-                />
-              </div>
-              <div class="form-control">
-                <mat-label>Nickname:</mat-label>
-                <input
-                  formControlName="nickName"
-                  required
-                  placeholder="Enter Nick Name"
-                />
-              </div>
-            </div>
-          </mat-card-content>
-          <hr class="divider" />
-          <mat-card-header>Websites</mat-card-header>
-          <mat-card-content>
-            <div formGroupName="websites">
-              <div class="form-control">
-                <mat-label>Secure URL:</mat-label>
-                <input
-                  formControlName="secureURL"
-                  required
-                  placeholder="Enter Secure URL"
-                />
-              </div>
-              <div class="form-control">
-                <span></span>
-                <mat-checkbox class="checkbox" formControlName="gdpr"
-                  >GDPR</mat-checkbox
-                >
-              </div>
-            </div>
-          </mat-card-content>
-        </mat-card>
-        <div>
-          <button mat-flat-button color="primary" class="button" matStepperNext>
-            Next
-          </button>
-          <button
-            mat-flat-button
-            color="warn"
-            class="button"
-            matStepperPrevious
-          >
-            Cancel
-          </button>
-        </div>
-      </form>
+      <ng-template matStepLabel>Profile Information</ng-template>
+      <app-profile-information
+        [inputForm]="profileInfoForm"
+        [profileTypes]="profileTypes"
+      ></app-profile-information>
     </mat-step>
     <mat-step [stepControl]="profileConfigForm">
       <form [formGroup]="profileConfigForm">
         <ng-template matStepLabel>Profile Configuration</ng-template>
+        <app-profile-configuration
+          [inputForm]="profileConfigForm"
+          [policies]="policies"
+        ></app-profile-configuration>
       </form>
     </mat-step>
     <mat-step>
