--- a/front-end/src/app/pages/create-profile/create-profile.component.sass
+++ b/front-end/src/app/pages/create-profile/create-profile.component.sass
@@ -59,6 +59,15 @@ $primary-black: #333333
     align-items: center
     margin-bottom: 20px
     margin-right: 20px
+    padding-top: 10px
+    &.extend-width
+        width: 700px
+        select
+            width: 420px
+    button
+        margin-top: 0px
+        width: 50px
+        margin-left: 40px
 
 input
     width: 260px
@@ -92,3 +101,7 @@ mat-horizontal-stepper
 
 mat-card-header
     margin: 5px auto
+    font-weight: 500 !important
+
+.header, mat-label
+    padding-left: 5px
