--- a/front-end/src/app/pages/create-profile/profile-information/profile-information.component.html
+++ b/front-end/src/app/pages/create-profile/profile-information/profile-information.component.html
@@ -24,7 +24,7 @@
   >
     <mat-label>Profile Name: </mat-label>
     <input
-      formControlName="profileName"
+      formControlName="name"
       required
       placeholder="Enter Profile Name"
     />
