--- a/front-end/src/app/pages/create-profile/profile-configuration/profile-configuration.component.sass
+++ b/front-end/src/app/pages/create-profile/profile-configuration/profile-configuration.component.sass
@@ -1,1 +1,25 @@
 @use '../create-profile.component'
+
+$primary-blue: #4d93db
+
+mat-card-header
+    color: $primary-blue
+    font-size: 18px
+    margin-bottom: 20px
+    width: 100%
+
+mat-checkbox
+    margin-bottom: 10px
+
+mat-radio-button.vertical
+    width: 100%
+    margin-bottom: 10px
+
+.ra-options-container
+    width: 600px
+    select
+        max-width: 75px
+
+.form-control
+    mat-radio-button
+        margin-left: 15px
