--- a/front-end/src/app/pages/create-profile/profile-configuration/profile-configuration.component.sass
+++ b/front-end/src/app/pages/create-profile/profile-configuration/profile-configuration.component.sass
@@ -2,11 +2,25 @@
 
 $primary-blue: #4d93db
 
-mat-card-header
+// mat-card-header, mat-panel-title
+//     color: $primary-blue
+//     font-size: 18px
+//     margin-bottom: 20px
+//     width: 100%
+
+mat-panel-title
     color: $primary-blue
     font-size: 18px
     margin-bottom: 20px
     width: 100%
+    padding-top: 20px
+
+mat-expansion-panel
+    max-width: 1000px
+
+.action
+    margin-right: 15px
+    padding-top: 10px
 
 mat-checkbox
     margin-bottom: 10px
