--- a/front-end/src/app/pages/create-profile/profile-configuration/profile-configuration.component.html
+++ b/front-end/src/app/pages/create-profile/profile-configuration/profile-configuration.component.html
@@ -19,20 +19,147 @@
       </button>
     </div>
   </div>
-  <h4 class="header" *ngIf="currentPolicy">
+  <h4 class="header" *ngIf="!!currentPolicy">
     Selected Policies & Configurations
   </h4>
   <div formArrayName="policies">
     <div *ngFor="let po of inputForm.get('policies').controls; let i = index">
-      <mat-card *ngIf="currentPolicy">
+      <mat-accordion>
+        <mat-expansion-panel [expanded]="getPolicyName(po) === currentPolicy.name">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              {{ getPolicyName(po) }}
+            </mat-panel-title>
+            <button mat-icon-button class="action" (click)="deletePolicy(po.value.name, i)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-expansion-panel-header>
+          <div [formGroupName]="i">
+            <div formGroupName="generateOptions">
+              <mat-checkbox
+                class="checkbox"
+                formControlName="generateSmartToken"
+                >Generate smart card/token</mat-checkbox
+              >
+              <mat-checkbox
+                class="checkbox"
+                formControlName="generateSoftwareKey"
+                >Generation of software key</mat-checkbox
+              >
+              <mat-checkbox class="checkbox" formControlName="enableExternalCSR"
+                >Enable use of an external CSR</mat-checkbox
+              >
+              <mat-checkbox
+                class="checkbox"
+                formControlName="generateSoftwareKeyServerSide"
+                >Generation of Software key - Server Side</mat-checkbox
+              >
+            </div>
+            <br />
+            <br />
+            <mat-radio-group formControlName="policy">
+              <mat-radio-button class="vertical" value="certInvite"
+                >Policy enabled on request pages</mat-radio-button
+              >
+              <mat-radio-button class="vertical" value="forcedCertInvite"
+                >Policy enabled with cert invite option</mat-radio-button
+              >
+              <mat-radio-button class="vertical" value="disableRequestPage"
+                >Policy enabled with forced cert invite</mat-radio-button
+              >
+              <mat-radio-button class="vertical" value="enableRequestPage"
+                >Policy disabled on request pages</mat-radio-button
+              >
+            </mat-radio-group>
+            <br />
+            <br />
+            <div formGroupName="raOptions">
+              <div formGroupName="requiredCertOrders">
+                <div class="form-control ra-options-container">
+                  <mat-label
+                    >RA Operators required for certificate orders:</mat-label
+                  >
+                  <div>
+                    <select formControlName="value" required>
+                      <option
+                        *ngFor="let count of [1, 2, 3, 4, 5]"
+                        [value]="count"
+                      >
+                        {{ count }}
+                      </option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-control">
+                  <mat-label
+                    >Bypass when Renewal Passphrase is available</mat-label
+                  >
+                  <mat-radio-group formControlName="bypass">
+                    <mat-radio-button value="true">Yes</mat-radio-button>
+                    <mat-radio-button value="false">No</mat-radio-button>
+                  </mat-radio-group>
+                </div>
+              </div>
+              <div formGroupName="requiredCertStatus">
+                <div class="form-control ra-options-container">
+                  <mat-label
+                    >RA Operators required for certificate status
+                    request:</mat-label
+                  >
+                  <div>
+                    <select formControlName="value" required>
+                      <option
+                        *ngFor="let count of [1, 2, 3, 4, 5]"
+                        [value]="count"
+                      >
+                        {{ count }}
+                      </option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-control">
+                  <mat-label
+                    >Bypass when Revocation Passphrase is available</mat-label
+                  >
+                  <mat-radio-group formControlName="bypass">
+                    <mat-radio-button value="true">Yes</mat-radio-button>
+                    <mat-radio-button value="false">No</mat-radio-button>
+                  </mat-radio-group>
+                </div>
+              </div>
+              <div class="form-control ra-options-container">
+                <mat-label
+                  >RA Operators required for key recovery requests if policy
+                  contain archival:</mat-label
+                >
+                <div>
+                  <select formControlName="requiredKeyRecovery" required>
+                    <option
+                      *ngFor="let count of [1, 2, 3, 4, 5]"
+                      [value]="count"
+                    >
+                      {{ count }}
+                    </option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
+      <!-- <mat-card *ngIf="currentPolicy">
         <mat-card-header>
-          <div style="width: 100%; padding:0px" fxLayout="row" fxLayoutAlign="space-between center">
+          <div
+            style="width: 100%; padding: 0px"
+            fxLayout="row"
+            fxLayoutAlign="space-between center"
+          >
             <span>{{ getPolicyName(po) }}</span>
             <div class="actions">
-              <button mat-icon-button >
+              <button mat-icon-button>
                 <mat-icon>delete</mat-icon>
               </button>
-              <button mat-icon-button >
+              <button mat-icon-button>
                 <mat-icon>edit</mat-icon>
               </button>
             </div>
@@ -151,8 +278,8 @@
             </div>
           </div>
         </mat-card-content>
-      </mat-card>
-      <br/>
+      </mat-card> -->
+      <br />
     </div>
   </div>
   <div *ngIf="currentPolicy">
