--- a/front-end/src/app/pages/create-profile/create-profile.component.sass
+++ b/front-end/src/app/pages/create-profile/create-profile.component.sass
@@ -94,19 +94,19 @@ option
 .checkbox
     width: 268px
 
-.form_error input,
-.form_error select
-    border: 2px solid $primary-red !important
+.form_error
+    select, input
+        border: 2px solid $primary-red !important
 
 mat-card
-    max-width: 1000px
+        max-width: 1000px
 
 mat-horizontal-stepper
-    background-color: #fcfcfc
+        background-color: #fcfcfc
 
 mat-card-header
-    margin: 5px auto
-    font-weight: 500 !important
+        margin: 5px auto
+        font-weight: 500 !important
 
 .header, mat-label
     padding-left: 5px
