--- a/front-end/src/app/pages/create-profile/profile-information/profile-information.component.html
+++ b/front-end/src/app/pages/create-profile/profile-information/profile-information.component.html
@@ -18,30 +18,38 @@
     class="form-control"
     *ngIf="inputForm?.get('profileType')?.value"
     [class.form_error]="
-      inputForm?.get('profileName')?.touched &&
-      inputForm?.get('profileName')?.errors
+      inputForm?.get('name')?.touched && inputForm?.get('name')?.errors
     "
   >
     <mat-label>Profile Name: </mat-label>
-    <input
-      formControlName="name"
-      required
-      placeholder="Enter Profile Name"
-    />
+    <input formControlName="name" required placeholder="Enter Profile Name" />
   </div>
   <mat-card *ngIf="inputForm?.get('profileType')?.value">
     <mat-card-header>Email Addresses</mat-card-header>
     <mat-card-content>
       <div formGroupName="emailAddresses" class="form-group">
-        <div class="form-control">
+        <div
+          class="form-control"
+          [class.form_error]="
+            inputForm?.get('emailAddresses.raFromEmailAddress')?.touched &&
+            inputForm?.get('emailAddresses.raFromEmailAddress')?.errors
+          "
+        >
           <mat-label>RA "From" Email Address:</mat-label>
           <input
             formControlName="raFromEmailAddress"
             required
+            type="email"
             placeholder="Enter RA From Email Address"
           />
         </div>
-        <div class="form-control">
+        <div
+          class="form-control"
+          [class.form_error]="
+            inputForm?.get('emailAddresses.supportEmailAddress')?.touched &&
+            inputForm?.get('emailAddresses.supportEmailAddress')?.errors
+          "
+        >
           <mat-label>Support Email Address:</mat-label>
           <input
             formControlName="supportEmailAddress"
@@ -49,7 +57,13 @@
             placeholder="Enter Support Email Address"
           />
         </div>
-        <div class="form-control">
+        <div
+          class="form-control"
+          [class.form_error]="
+            inputForm?.get('emailAddresses.nickName')?.touched &&
+            inputForm?.get('emailAddresses.nickName')?.errors
+          "
+        >
           <mat-label>Nickname:</mat-label>
           <input
             formControlName="nickName"
@@ -63,7 +77,13 @@
     <mat-card-header>Websites</mat-card-header>
     <mat-card-content>
       <div formGroupName="websites">
-        <div class="form-control">
+        <div
+          class="form-control"
+          [class.form_error]="
+            inputForm?.get('websites.secureURL')?.touched &&
+            inputForm?.get('websites.secureURL')?.errors
+          "
+        >
           <mat-label>Secure URL:</mat-label>
           <input
             formControlName="secureURL"
@@ -81,10 +101,20 @@
     </mat-card-content>
   </mat-card>
   <div>
-    <button mat-flat-button color="primary" class="button" matStepperNext>
+    <button
+      mat-flat-button
+      color="primary"
+      class="button"
+      (click)="stepperAction('next')"
+    >
       Next
     </button>
-    <button mat-flat-button color="warn" class="button" matStepperPrevious>
+    <button
+      mat-flat-button
+      color="warn"
+      class="button"
+      (click)="stepperAction('previous')"
+    >
       Cancel
     </button>
   </div>
